# lean-playground

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  lean.json  pyproject.toml
.buildforce/: buildforce.json
.buildforce/context/: _index.yaml  _schema.yaml
.buildforce/scripts/bash/: common.sh  create-session-files.sh
.buildforce/sessions/sr-levels-20260128142300/: plan.yaml  research.yaml  spec.yaml
.buildforce/templates/: guidelines-template.yaml  plan-template.yaml  research-template.yaml  spec-template.yaml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude-plugins/achieve/: README.md
.claude-plugins/achieve/.claude-plugin/: plugin.json
.claude-plugins/achieve/commands/: cancel-goal.md  goal.md  list-goals.md
.claude/commands/: achieve.md  buildforce.build.md  buildforce.complete.md  buildforce.document.md  buildforce.plan.md  buildforce.research.md  cancel-achieve.md  evolve.learn.md  evolve.reflect.md  smart-commit.md  strategy.write.md  suggest-commit.md
.claude/scripts/: auto-install-plugins.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-release.yml
algorithms/sample_sma_crossover/: main.py  research.ipynb
research/: getting_started.ipynb
scripts/: download_data.sh  lp  pull-from-upstream.sh  run_backtest.sh  start_jupyter.sh
scripts/lean_playground/: __init__.py  analyze.py  backtest.py  binance_client.py  brokerages.py  browse.py  config.py  data_inspect.py  download.py  jupyter.py  lean_writer.py  live.py  project.py  status.py  update.py
scripts/tests/: test_lean_playground.py  test_smoke.py
tests/: test_smoke.py
(+16 files in other folders)
