[project]
name = "lean-playground"
version = "0.1.0"
description = "QuantConnect Lean algorithmic trading playground"
authors = [
    {name = "Todor Kolev", email = "tkolev@obecto.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Additional ML packages not in lean:foundation
    "river>=0.21.0",
    "einops>=0.7.0",

    # Environment config
    "python-dotenv>=1.0.0",

    # Lean CLI for project management
    "lean",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black",
    "isort",
    "pylint",
    "debugpy",
]
jupyter = [
    "jupyterlab",
]

[tool.hatch.build.targets.wheel]
packages = ["algorithms", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black",
    "isort",
    "pylint",
    "debugpy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["algorithms"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116"
